--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     multipart:
       max-file-size: 10MB    # 每个文件的最大大小
       max-request-size: 10MB # 总请求的最大大小
+  mvc:
+    favicon:
+      enabled: false
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
