--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.microsoft.sqlserver</groupId> -->
+<!--             <artifactId>mssql-jdbc</artifactId> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
