--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,6 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
-<!--         <dependency> -->
-<!--             <groupId>com.microsoft.sqlserver</groupId> -->
-<!--             <artifactId>mssql-jdbc</artifactId> -->
-<!--         </dependency> -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
@@ -120,6 +116,11 @@
             <groupId>org.xhtmlrenderer</groupId>
             <artifactId>flying-saucer-pdf</artifactId>
             <version>9.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.27</version>
         </dependency>
     </dependencies>
 
